Fix IT
Signed-off-by: Lantao Jin <ltjin@amazon.com>